Bug 269449 - [threaded-animation-resolution] discrete `filter` interpolation should not be accelerated
Summary: [threaded-animation-resolution] discrete `filter` interpolation should not be...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
Depends on:
Blocks: 250970
  Show dependency treegraph
 
Reported: 2024-02-15 02:06 PST by Antoine Quint
Modified: 2024-02-15 12:55 PST (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2024-02-15 02:06:59 PST
The CSS `filter` property animates discretely if two `filter` values do not have a shared initial list of filter operations, as specified in https://drafts.fxtf.org/filter-effects/#interpolation-of-filters. What's more, the system we use to animate `filter` in the UIProcess relies on `CAPresentationModifier` on macOS and requires a known list of filter operations for initial setup, which falls apart if we are dealing with mis-matching filter lists. As such we must make sure we don't create `AcceleratedEffect` objects that contain `filter` values that will animate discretely.
Comment 1 Antoine Quint 2024-02-15 02:21:36 PST
Pull request: https://github.com/WebKit/WebKit/pull/24497
Comment 2 EWS 2024-02-15 12:54:43 PST
Committed 274755@main (c78d9eaa4297): <https://commits.webkit.org/274755@main>

Reviewed commits have been landed. Closing PR #24497 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2024-02-15 12:55:28 PST
<rdar://problem/123030803>