Source/WebCore/platform/animation/AcceleratedEffect.cpp
@@ -33,6 +33,7 @@
 #include "CSSPropertyAnimation.h"
 #include "CSSPropertyNames.h"
 #include "Document.h"
+#include "FilterOperations.h"
 #include "FloatRect.h"
 #include "KeyframeEffect.h"
 #include "LayoutSize.h"
@@ -56,6 +57,11 @@ AcceleratedEffect::Keyframe::Keyframe(double offset, AcceleratedEffectValues&& v
     , m_compositeOperation(compositeOperation)
     , m_animatedProperties(WTFMove(animatedProperties))
 {
+}
+
+void AcceleratedEffect::Keyframe::clearProperty(AcceleratedEffectProperty property)
+{
+    m_animatedProperties.remove({ property });
 }
 
 bool AcceleratedEffect::Keyframe::animatesProperty(KeyframeInterpolation::Property property) const
@@ -161,9 +167,13 @@ static CSSPropertyID cssPropertyFromAcceleratedProperty(AcceleratedEffectPropert
     }
 }
 
-Ref<AcceleratedEffect> AcceleratedEffect::create(const KeyframeEffect& effect, const IntRect& borderBoxRect)
+RefPtr<AcceleratedEffect> AcceleratedEffect::create(const KeyframeEffect& effect, const IntRect& borderBoxRect, const AcceleratedEffectValues& baseValues)
 {
-    return adoptRef(*new AcceleratedEffect(effect, borderBoxRect));
+    auto* acceleratedEffect = new AcceleratedEffect(effect, borderBoxRect);
+    acceleratedEffect->validateFilters(baseValues);
+    if (acceleratedEffect->animatedProperties().isEmpty())
+        return nullptr;
+    return adoptRef(*acceleratedEffect);
 }
 
 Ref<AcceleratedEffect> AcceleratedEffect::create(AnimationEffectTiming timing, Vector<Keyframe>&& keyframes, WebAnimationType type, CompositeOperation composite, RefPtr<TimingFunction>&& defaultKeyframeTimingFunction, OptionSet<WebCore::AcceleratedEffectProperty>&& animatedProperties, bool paused, double playbackRate, std::optional<Seconds> startTime, std::optional<Seconds> holdTime)
@@ -374,6 +384,88 @@ void AcceleratedEffect::apply(Seconds currentTime, AcceleratedEffectValues& valu
 
         interpolateKeyframes(animatedProperty, interval, progress, *resolvedTiming.currentIteration, m_timing.iterationDuration, composeProperty, accumulateProperty, interpolateProperty, requiresBlendingForAccumulativeIterationCallback);
     }
+}
+
+using OptionalKeyframeIndex = std::optional<size_t>;
+
+void AcceleratedEffect::validateFilters(const AcceleratedEffectValues& baseValues)
+{
+    auto numberOfKeyframes = m_keyframes.size();
+
+    auto findKeyframePair = [&](size_t startingIndex, AcceleratedEffectProperty property) -> std::pair<OptionalKeyframeIndex, OptionalKeyframeIndex> {
+        OptionalKeyframeIndex firstKeyframeIndex;
+        for (size_t i = startingIndex; i < numberOfKeyframes; ++i) {
+            auto& keyframe = m_keyframes[i];
+            // Nothing to do for a keyframe that doesn't contain this property.
+            if (!keyframe.animatesProperty(property))
+                continue;
+
+            // If we're dealing with a keyframe with offset = 1, this can only be our last keyframe,
+            // so there will not be another keyframe pair with the provided starting index.
+            if (keyframe.offset() == 1 && !firstKeyframeIndex)
+                return { };
+
+            if (firstKeyframeIndex)
+                return { *firstKeyframeIndex, i };
+            firstKeyframeIndex = i;
+        }
+
+        if (!firstKeyframeIndex)
+            return { };
+
+        // If we get here this means we have a first keyframe but no last keyframe. Thus we
+        // create a pair with an implicit keyframe. If the starting index is 0, this means
+        // we were looking for our very first pair and the implicit keyframe is the first
+        // keyframe.
+        if (!startingIndex)
+            return { std::nullopt, *firstKeyframeIndex };
+        return { *firstKeyframeIndex, std::nullopt };
+    };
+
+    auto filterOperations = [&](OptionalKeyframeIndex index, AcceleratedEffectProperty property) -> const FilterOperations& {
+        ASSERT(!index || *index < numberOfKeyframes);
+        auto& values = index ? m_keyframes[*index].values() : baseValues;
+        switch (property) {
+        case AcceleratedEffectProperty::Filter:
+            return values.filter;
+        case AcceleratedEffectProperty::BackdropFilter:
+            return values.backdropFilter;
+        default:
+            ASSERT_NOT_REACHED();
+            return values.filter;
+        }
+    };
+
+    auto clearProperty = [&](AcceleratedEffectProperty property) {
+        m_animatedProperties.remove({ property });
+        for (auto& keyframe : m_keyframes)
+            keyframe.clearProperty(property);
+    };
+
+    auto validateProperty = [&](AcceleratedEffectProperty property) {
+        for (size_t i = 0; i < numberOfKeyframes;) {
+            auto indexes = findKeyframePair(i, property);
+            if (!indexes.first && !indexes.second)
+                return;
+
+            auto& fromFilters = filterOperations(indexes.first, property);
+            auto& toFilters = filterOperations(indexes.second, property);
+            // FIXME: we should provide the actual composite operation here.
+            if (!fromFilters.canInterpolate(toFilters, CompositeOperation::Replace)) {
+                clearProperty(property);
+                return;
+            }
+
+            if (!indexes.second)
+                return;
+            i = *indexes.second;
+        }
+    };
+
+    if (m_animatedProperties.contains(AcceleratedEffectProperty::Filter))
+        validateProperty(AcceleratedEffectProperty::Filter);
+    if (m_animatedProperties.contains(AcceleratedEffectProperty::BackdropFilter))
+        validateProperty(AcceleratedEffectProperty::BackdropFilter);
 }
 
 bool AcceleratedEffect::animatesTransformRelatedProperty() const
